--- a/BTVN/Day8/Bai3/bai3.html
+++ b/BTVN/Day8/Bai3/bai3.html
@@ -42,37 +42,37 @@
         <a href="#" class="box_dis">
             <div class="box">
                 <h4>Quận 2</h4>
-                <p><span>4.186 bất động sản đang bán</span></p>
+                <p><span>4.186</span> bất động sản đang bán</p>
             </div>
         </a>
         <a href="#" class="box_dis">
             <div class="box">
                 <h4>Quận 7</h4>
-                <p><span>4.664 bất động sản đang bán</span></p>
+                <p><span>4.664</span> bất động sản đang bán</p>
             </div>
         </a>
         <a href="#" class="box_dis">
             <div class="box">
                 <h4>Quận 9</h4>
-                <p><span>3.702 bất động sản đang bán</span></p>
+                <p><span>3.702</span> bất động sản đang bán</p>
             </div>
         </a>
         <a href="#" class="box_dis">
             <div class="box">
                 <h4>Quận Tân Bình</h4>
-                <p><span>3.062 bất động sản đang bán</span></p>
+                <p><span>3.062</span> bất động sản đang bán</p>
             </div>
         </a>
         <a href="#" class="box_dis">
             <div class="box">
                 <h4>Thành phố Thủ Đức</h4>
-                <p><span>2.843 bất động sản đang bán</span></p>
+                <p><span>2.843</span> bất động sản đang bán</p>
             </div>
         </a>
         <a href="#" class="box_dis">
             <div class="box">
                 <h4>Huyện Bình Chánh</h4>
-                <p><span>3.235 bất động sản đang bán</span></p>
+                <p><span>3.235</span> bất động sản đang bán</p>
             </div>
         </a>
       </div>
