--- a/BTVN/Day8/Bai2/bai2.html
+++ b/BTVN/Day8/Bai2/bai2.html
@@ -8,6 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="content_container">
+        <div class="logo">
+            <img src="./vin.jpg" alt="VinGroup">
+        </div>
+        <h3>tập đoàn vingroup</h3>
+        <div class="about">
+            <p>năm thành lập: <span>1993</span></p>
+            <p>dự án đã đầu tư: <span>35</span></p>
+        </div>
+    </div>
+    <nav>
+        <ul>
+            <li>Giới thiệu</li>
+            <li>Dự án đã đầu tư</li>
+            <li>Liên hệ</li>
+        </ul>
+    </nav>
 </body>
 </html>
