--- a/BTVN/Day8/Bai1/bai1.html
+++ b/BTVN/Day8/Bai1/bai1.html
@@ -16,7 +16,7 @@
             <div class="header"><h2>Ha Noi Melody Residences</h2></div>
             <div class="desc">
                 <p>
-                    Dự án Ha Noi Melody Residences tọa lạc ngay trung tâm Khu đô thị mới Linh Đàm. Dự án có quy mô 3.28ha, dự kiến cung ứng ra thị trường 1.857 căn hộ cao cấp
+                    Dự án Ha Noi Melody Residences tọa lạc ngay trung tâm Khu đô thị mới Linh Đàm. <br> Dự án có quy mô 3.28ha, dự kiến cung ứng ra thị trường 1.857 căn hộ cao cấp
                 </p>
             </div>
             <p><i class="ri-map-pin-line"></i>Quận Hoàng Mai, Hà Nội</p>
