--- a/BTVN/Day8/Bai3/bai3.html
+++ b/BTVN/Day8/Bai3/bai3.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div class="content_container">
-      <h3>Khám phá bất động sản các khu vực nổi bật</h3>
+      <div class="header">
+        <h3>Khám phá bất động sản các khu vực nổi bật</h3>
+        <hr>
+      </div>
         <ul>
           <li>
             <a href="#">Hồ Chí Minh <span>50.317 bất động sản</span></a>
