--- a/BTVN/Day10/Bai3/bai3.html
+++ b/BTVN/Day10/Bai3/bai3.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="letter">
-            <div class="cover">
+            <div class="outline">
                 <div class="left"></div>
                 <div class="right"></div>
             </div>
@@ -27,7 +27,7 @@
                 <div class="line_one"></div>
                 <div class="line_two"></div>
                 <div class="circle"></div>
-            </div>
+                </div>
         </div>
         <div class="box_shadow">
             
