--- a/BTVN/Day11/bai1.html
+++ b/BTVN/Day11/bai1.html
@@ -108,7 +108,7 @@
                 <img src="./images/feat2.png" style="width: 110%;">
             </div>
             <div class="content_feature" style=" margin-right: 130px;">
-                <h5 style="color: #!F9BA45;">HOME DELIVERY</h5>
+                <h5 style="color: #F9BA45;">HOME DELIVERY</h5>
                 <h2>Sit at Home We Will Take Care Your Order</h2>
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos</p>
                 <a href="#!" class="btn">Explore Now</a>
@@ -120,7 +120,7 @@
                     <img src="./images/mobile.svg">
                 </div>
                 <div class="content_feature">
-                    <h5 style="color: #!F54748;">Download our app</h5>
+                    <h5>Download our app</h5>
                     <h2>Get the Groceries app order more easily.</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                     <div class="app_store">
