--- a/BTVN/Day11/bai1.html
+++ b/BTVN/Day11/bai1.html
@@ -120,7 +120,7 @@
                     <img src="./images/mobile.svg">
                 </div>
                 <div class="content_feature">
-                    <h5>Download our app</h5>
+                    <h5 style="color: #F54748;">Download our app</h5>
                     <h2>Get the Groceries app order more easily.</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                     <div class="app_store">
