--- a/BTVN/Day11/bai1.html
+++ b/BTVN/Day11/bai1.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./images/logo.svg" alt="">
+            <img src="./images/logo.svg" alt="Grover">
         </div>
         <nav>
             <ul>
