--- a/BTVN/Day11/bai1.html
+++ b/BTVN/Day11/bai1.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./images/logo.svg" alt="Grover">
+            <img src="./images/logo.svg" alt="grover">
         </div>
         <nav>
             <ul>
@@ -42,13 +42,13 @@
                 <div class="order">
                     <a href="#!" class="btn">Order Now</a>
                     <button>
-                        <img src="./images/button-play.svg" alt="">
+                        <img src="./images/button-play.svg" alt="play-img">
                         <span>Order Process</span>
                     </button>
                 </div>
             </div>
             <div class="image">
-                <img src="./images/header-img.png" alt="image1">
+                <img src="./images/header-img.png" alt="header-img">
             </div>
         </section>
         <!--    ============================      -->
@@ -63,7 +63,7 @@
                         <div class="background_hover"></div>
                         <div class="card">
                             <div class="img">
-                                <img src="./images/service-ic1.svg" alt="">
+                                <img src="./images/service-ic1.svg" alt="service">
                             </div>
                                 <h3>Free shipping</h3>
                                 <p>Enjoy Order in a hand using the fresness of groceries</p>
@@ -73,7 +73,7 @@
                         <div class="background_hover"></div>
                         <div class="card">
                             <div class="img">
-                                <img src="./images/service-ic2.svg" alt="">
+                                <img src="./images/service-ic2.svg" alt=return_service"">
                             </div>
                                 <h3>15 days returns</h3>
                                 <p>Order in a handy way using the freshness of the groceries.</p>
@@ -83,7 +83,7 @@
                         <div class="background_hover"></div>
                         <div class="card">
                             <div class="img">
-                                <img src="./images/service-ic3.svg" alt="">
+                                <img src="./images/service-ic3.svg" alt="delivery">
                             </div>
                                 <h3>Free shipping</h3>
                                 <p>If you get rotten items - return immediately to us.</p>
@@ -94,7 +94,7 @@
         </div>
         <section class="fetured_section">
             <div class="image_fetured_section">
-                <img src="./images/feat.png" alt="">
+                <img src="./images/feat.png" alt="feature">
             </div>
             <div class="content_feature">
                 <h5>WHY CHOOSE US</h5>
@@ -105,7 +105,7 @@
         </section>
         <section class="fetured_section">
             <div class="image_fetured_section" style="order: 2;">
-                <img src="./images/feat2.png" style="width: 110%;">
+                <img src="./images/feat2.png" style="width: 110%;" alt="fetured">
             </div>
             <div class="content_feature" style=" margin-right: 130px;">
                 <h5 style="color: #F9BA45;">HOME DELIVERY</h5>
@@ -117,7 +117,7 @@
         <div class="layout">
             <section class="download_section">
                 <div class="image_download_section">
-                    <img src="./images/mobile.svg">
+                    <img src="./images/mobile.svg" alt="dodowwnload_image">
                 </div>
                 <div class="content_feature">
                     <h5 style="color: #F54748;">Download our app</h5>
@@ -125,11 +125,11 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
                     <div class="app_store">
                         <a href="#!">
-                            <img src="./images/apple.svg" alt="">
+                            <img src="./images/apple.svg" alt="app_store">
                             <span>App Store</span>
                         </a>
                         <a href="#!" style="margin-left: 14px;">
-                            <img src="./images/playstore.svg" alt="">
+                            <img src="./images/playstore.svg" alt="ch_play">
                             <span>Play Store</span>
                         </a>
                     </div>
@@ -141,7 +141,7 @@
     <footer>
         <div class="main_footer">
             <div class="introduce_footer">
-                <img src="./images/logo.svg">
+                <img src="./images/logo.svg" alt="grover">
                 <p>Fast delivery, which is active all over the world, serves with many transportation vehicles.</p>
             </div>
            <div class="middle_quick_link">
